# new_todo_app_backend_25_03_11

./: db.sqlite3  pyproject.toml
common/: models.py
config/: settings.py
imgs/: models.py
imgs/migrations/: 0001_initial.py  0002_img_delete_note.py
todos/: models.py  urls.py  views.py
todos/migrations/: 0001_initial.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py
